-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.0, 4.8.1, 4.8.2, 4.8.3, 4.8.6, 5.3.2
-
None
The fix for QTBUG-21025 was only partial. This bug is also present on line 5473 (http://qt.gitorious.org/qt/qt/blobs/4.8/src/xml/sax/qxml.cpp#line5473). It contains the same kind of method for fetching the data from QXmlInputSource that QTBUG-21025 had. That is instead of plain "xmlRefString = ret->data();" there should be a while loop.
For Gerrit Dashboard: QTBUG-26910 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
95486,5 | QXmlSimpleReader shall handle external entity reference file over 1k | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |